--- a/templates/landing.html
+++ b/templates/landing.html
@@ -247,12 +247,12 @@
         }
 
         .gauge-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 100%;
-            height: 100%;
-        }
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    min-height: 200px; /* NEW: ensure decent height */
+}
 
         .gauge {
             width: 100%;
@@ -552,8 +552,8 @@
             
             #sensor-gauges {
                 grid-template-columns: 1fr;
-                grid-template-rows: repeat(8, 1fr);
-                height: 1200px;
+                grid-template-rows: repeat(8, auto);
+                height: auto;
             }
             
             #imu-data {
