--- a/templates/landing.html
+++ b/templates/landing.html
@@ -1,5 +1,6 @@
 
 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -1053,7 +1054,7 @@ function updateRopeSegments(inspectedLength, ropeLength) {
 
             // Update sensors
             for (let i = 1; i <= 8; i++) {
-    const value = data.sensors[i].value || 0;
+    const value = data.sensors[i] || 0;
     
     if (gaugeCharts[i]) {
         gaugeCharts[i].series[0].points[0].update(value);
